--- a/app/views/schedules/_calendar.html.erb
+++ b/app/views/schedules/_calendar.html.erb
@@ -16,11 +16,12 @@
 					<ul>
 						<% if !schedule_entries_by_day[day].nil? %>
 							<% schedule_entries_by_day[day].sort.each do |entry| %>
-								<%= render :partial => 'schedules/schedule_entry', :locals => {:entry => entry, :day => day} %>
+								<%= render :partial => 'schedules/schedule_entry', :locals => {:entry => entry} %>
 							<% end %>
 						<% end %>
 						<% @availabilities[day].each do |user_id, hours| %>
-							<%= render :partial => 'schedules/availability', :locals => {:user_id => user_id, :hours => hours, :day => day } %>
+							<% user = User.find(user_id) %>
+							<%= render :partial => 'schedules/availability', :locals => {:user => user, :hours => hours, :day => day } %>
 						<% end unless @availabilities.nil? || @availabilities.empty? %>
 					</ul>
 				</td>
