--- a/app/views/my/blocks/_my_schedule.html.erb
+++ b/app/views/my/blocks/_my_schedule.html.erb
@@ -1,4 +1,4 @@
-<h3><%= l(:label_schedules_my) %></h3>
+<h3><%= l(:label_schedules_my_index) %></h3>
 
 <%
 	@date = Date.civil(Date.today.year, Date.today.month, Date.today.day - Date.today.wday)
