--- a/app/views/schedules/default.html.erb
+++ b/app/views/schedules/default.html.erb
@@ -1,4 +1,4 @@
-<%= breadcrumb link_to(l(:label_schedules_my), {:controller => 'schedules', :action => 'my' } ) %>
+<%= breadcrumb link_to(l(:label_schedules_my_index), {:controller => 'schedules', :action => 'my_index' } ) %>
 
 <h2>
 	<%= l(:label_schedules_default, :target => link_to_user(@user)) %>
