--- a/assets/stylesheets/schedules.css
+++ b/assets/stylesheets/schedules.css
@@ -5,8 +5,9 @@ table.schedule_entry_grid td { text-align: center; vertical-align: middle; }
 table.schedule_entry_grid input { text-align: center; }
 table.schedule_entry_cal td { padding: 0; }
 table.schedule_entry_cal ul { list-style-type: none; padding: 0; margin: 0.5em 0.5em 0; }
-table.schedule_entry_cal li {  }
-table.schedule_entry_cal div { padding: 0.5em; margin-bottom: 0.5em; line-height: 1em; }
+table.schedule_entry_cal li div { padding: 0.5em; margin-bottom: 0.5em; line-height: 1em; border: 1px solid #CCC; background: #EEE; }
+table.schedule_entry_cal li.availability_entry div { opacity: 0.6; }
+table.schedule_entry_cal li.schedule_entry div { }
 span.schedule_available { white-space: nowrap; }
 td.hours table.progress { float: right; margin: 1px 0 1px 6px; }
 td.hours p.pourcent { font-size: inherit; }
