Working towards language compatibility with Redmine 0.8.3

--- a/app/views/schedules/default.html.erb
+++ b/app/views/schedules/default.html.erb
@@ -1,7 +1,7 @@
 <%= breadcrumb link_to(l(:label_schedules_my_index), {:controller => 'schedules', :action => 'my_index' } ) %>
 
 <h2>
-	<%= l(:label_schedules_default, :target => link_to_user(@user)) %>
+	<%= l(:label_schedules_default, link_to_user(@user)) %>
 </h2>
 
 <% form_tag({:action=> "default"}) do %>
