Added trunk/0.8 compatibility using a compatibility layer for I18n
* Created RedmineCompatibility::I18n with wrappers for
  * lwr()
  * l_hours()

--- a/app/views/schedules/details.html.erb
+++ b/app/views/schedules/details.html.erb
@@ -17,7 +17,7 @@ already in the URI %>
 <% end %>
 
 <div class="total-hours">
-<p><%= l(:label_total) %>: <%= html_hours(l_hours(@total_hours)) %></p>
+<p><%= l(:label_total) %>: <%= html_hours(RedmineCompatibility::I18n.l_hours(@total_hours)) %></p>
 </div>
 
 <% unless @entries.empty? %>
@@ -27,7 +27,7 @@ already in the URI %>
 <% other_formats_links do |f| %>
 	<%= f.link_to 'Atom', :url => params.merge({:issue_id => @issue, :key => User.current.rss_key}) %>
 	<%= f.link_to 'CSV', :url => params %>
-<% end %>
+<% end if defined? other_formats_links %>
 <% end %>
 
 <% html_title l(:label_schedules_index), l(:label_details) %>
