Fixing issue with editing a project's schedule

--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -4,7 +4,7 @@
 
 <h2>
 	<%= l(:label_schedule_edit, link_to_user(@user)) unless @user.nil? %>
-	<%= l(:label_schedule_edit, @project) unless @project.nil? %>
+	<%= l(:label_schedule_edit, @project.to_s) unless @project.nil? %>
 	<%= l(:label_schedule_edit, "today") if @user.nil? && @project.nil? %>
 </h2>
 
