Temporary holdover for https://projects.littlestreamsoftware.com/issues/2509

--- a/app/views/schedules/_list.html.erb
+++ b/app/views/schedules/_list.html.erb
@@ -24,7 +24,7 @@
 <td class="project"><%=h entry.project %></td>
 <td class="hours"><%= html_hours("%.2f" % entry.hours) %></td>
 <td align="center">
-<% if entry.editable_by?(User.current) -%>
+<% if entry.editable_by?(User.current) && false -%>
     <%= link_to image_tag('edit.png'), {:controller => 'timelog', :action => 'edit', :id => entry, :project_id => nil},
                                        :title => l(:button_edit) %>
     <%= link_to image_tag('delete.png'), {:controller => 'timelog', :action => 'destroy', :id => entry, :project_id => nil},
