--- a/app/views/schedules/details.html.erb
+++ b/app/views/schedules/details.html.erb
@@ -17,7 +17,7 @@ already in the URI %>
 <% end %>
 
 <div class="total-hours">
-<p><%= l(:label_total) %>: <%= html_hours(RedmineCompatibility::I18n.l_hours(@total_hours)) %></p>
+<p><%= l(:label_total) %>: <%= html_hours(ScheduleCompatibility::I18n.l_hours(@total_hours)) %></p>
 </div>
 
 <% unless @entries.empty? %>
