--- a/app/views/schedules/report.html.erb
+++ b/app/views/schedules/report.html.erb
@@ -40,7 +40,7 @@
 
 <% unless @criterias.empty? %>
 <div class="total-hours">
-<p><%= l(:label_total) %>: <%= html_hours(RedmineCompatibility::I18n.l_hours(@total_hours)) %></p>
+<p><%= l(:label_total) %>: <%= html_hours(ScheduleCompatibility::I18n.l_hours(@total_hours)) %></p>
 </div>
 
 <% unless @hours.empty? %>
