--- a/app/views/my/blocks/_my_schedule.html.erb
+++ b/app/views/my/blocks/_my_schedule.html.erb
@@ -5,15 +5,20 @@
 	@calendar = Redmine::Helpers::Calendar.new(@date, current_language, :week)
 	@projects = Project.find(:all, :conditions => Project.allowed_to_condition(User.current, :view_schedules))
 	
-	restrictions = "(date BETWEEN '#{@calendar.startdt}' AND '#{@calendar.enddt}')"
-	restrictions << " AND user_id = #{User.current.id}"
-	restrictions << " AND project_id IN ("+@projects.collect {|project| project.id.to_s }.join(',')+")"
-	
-	@entries = ScheduleEntry.find(:all, :conditions => restrictions)
-	@availabilities = Hash.new
+	unless @projects.empty?
+        restrictions = "(date BETWEEN '#{@calendar.startdt}' AND '#{@calendar.enddt}')"
+        restrictions << " AND user_id = #{User.current.id}"
+        restrictions << " AND project_id IN ("+@projects.collect {|project| project.id.to_s }.join(',')+")"
+    
+        @entries = ScheduleEntry.find(:all, :conditions => restrictions)
+        @availabilities = Hash.new
 %>
 
 <%= render :partial => 'schedules/calendar', :locals => {:calendar => @calendar } %>
+
+<% else %>
+    <p class="nodata"><%= l(:label_no_data) %></p>
+<% end %>
 
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'schedules', :plugin => 'redmine_schedules' %>
