--- a/app/views/schedules/_project.html.erb
+++ b/app/views/schedules/_project.html.erb
@@ -11,7 +11,7 @@
 			<tr>
 				<%= "<th>#{user}</th>" %>
 				<% (calendar.startdt..calendar.enddt).each do |day| %>
-					<td class="even<%= ' today' if Date.today == day %>">
+                                        <td class="even<%= ' today' if Date.today == day %> <%= ' holiday' if day.holiday?($holiday_locale, :observed) %>">
 						<%
 							if date_entries[day.ajd].nil?
 								entry = ScheduleEntry.new
@@ -38,7 +38,7 @@
 		<tr>
 			<th><%= l(:label_total) %></th>
 				<% (calendar.startdt..calendar.enddt).each do |day| %>
-				<th class="even<%= ' today' if Date.today == day %>">
+                                <td class="even<%= ' today' if Date.today == day %> <%= ' holiday' if day.holiday?($holiday_locale, :observed) %>">
 					<% sum = @entries.collect {|e| e.hours if e.date == day }.compact.sum %>
 					<%= sum if sum > 0 %>
 				</th>
