--- a/assets/stylesheets/schedules.css
+++ b/assets/stylesheets/schedules.css
@@ -16,3 +16,4 @@ span.schedule_available { white-space: nowrap; }
 td.hours table.progress { float: right; margin: 1px 0 1px 6px; }
 td.hours p.pourcent { font-size: inherit; }
 td.underscheduled table.progress td.closed { background: #e0dbba none repeat scroll 0%; }
+table.cal td.holiday { background: #EED; }
