Shouldn't display contextual links when no one's in the project

--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contextual">
-	<%= link_to(l(:button_schedules_edit), {:controller => 'schedules', :action => 'edit', :date => @date, :project_id => @project}, :class => 'icon icon-edit') if @project %>
-	<%= link_to(l(:button_schedules_fill), {:controller => 'schedules', :action => 'fill', :date => @date, :project_id => @project}, :class => 'icon icon-edit') if @project %>
+	<%= link_to(l(:button_schedules_edit), {:controller => 'schedules', :action => 'edit', :date => @date, :project_id => @project}, :class => 'icon icon-edit') if @project && !@users.empty? %>
+	<%= link_to(l(:button_schedules_fill), {:controller => 'schedules', :action => 'fill', :date => @date, :project_id => @project}, :class => 'icon icon-edit') if @project && !@users.empty?  %>
 	<%= link_to(l(:button_schedules_edit), {:controller => 'schedules', :action => 'edit', :date => @date, :user_id => @user}, :class => 'icon icon-edit') if @user %>
 	<%= link_to(l(:button_schedules_edit), {:controller => 'schedules', :action => 'edit', :date => @date, :user_id => User.current.id}, :class => 'icon icon-edit') unless @project || @user %>
 	<%= link_to(l(:button_schedules_default_edit), {:controller => 'schedules', :action => 'default', :user_id => @user}, :class => 'icon icon-edit') if @user && (@user == User.current || User.current.admin?) %>
