--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -25,17 +25,16 @@
 </fieldset>
 
 <p style="float:right; margin:0px;">
-	<%= link_to_remote ("&#171; #{l(:label_previous)} #{l(:label_week).downcase}"), {:update => "content", :url => { :date => @date - 7 }} %> |
-	<%= link_to_remote ("#{l(:label_next)} #{l(:label_week).downcase} &#187;"), {:update => "content", :url => { :date => @date + 7 }} %>
+	<%= link_to_remote ("&#171; #{l(:label_previous)} #{l(:label_week).downcase}"), {:update => "content", :url => params.merge( :date => @date - 7 )} %> |
+	<%= link_to_remote ("#{l(:label_next)} #{l(:label_week).downcase} &#187;"), {:update => "content", :url => params.merge( :date => @date + 7 )} %>
 </p>
 
 <p class="buttons">
     <%= link_to_remote l(:button_apply), 
 		{	:update => "content",
-			:with => "Form.serialize('date_form')"
+			:with => "Form.serialize('date_form')",
+			:url => params.delete_if {|key, value| [ "date", "day", "month", "year" ].include?(key) }
 		}, :class => 'icon icon-checked' %>
-	<%= link_to l(:button_reset), { :project_id => @project.id},  :class => 'icon icon-reload' unless @project.nil? %>
-	<%= link_to l(:button_reset), { :user_id => nil },  :class => 'icon icon-reload' if @project.nil? %>
 </p>
 
 <% end %>
