Allow editing another user's default availability

--- a/app/views/schedules/default.html.erb
+++ b/app/views/schedules/default.html.erb
@@ -5,6 +5,7 @@
 </h2>
 
 <% form_tag({:action=> "default"}) do %>
+	<%= hidden_field_tag 'user_id', @user.id unless @user.nil? %>
 	<div class="box">
 		<table class="cal schedule_entry_grid">
 			<thead>
