--- a/app/views/schedule_mailer/future_changed.html.erb
+++ b/app/views/schedule_mailer/future_changed.html.erb
@@ -1,2 +1,2 @@
 <%= @user %> has changed your schedule in <%= @project %>.
-On <%= @date %>, you'll be working <%= l(:label_f_hour, @hours) %>.
+On <%= @date %>, you'll be working <%= ScheduleCompatibility::I18n.lwr(:label_f_hour, :value => @hours) %>.
