Added a wrapper div around the calendar table to enable scrolling and changed the title to show smaller format of dates

--- a/app/views/schedules/_calendar.html.erb
+++ b/app/views/schedules/_calendar.html.erb
@@ -11,90 +11,91 @@
         </ul>
     </div>
 <% end %>
-
-<table class="cal schedule_entry_cal">
-	<thead>
-		<tr>
-            <% if !@focus.nil? %><th></th><% end %>
-			<% (calendar.startdt..calendar.enddt).each do |day| %>
-				<th><%= day_name(day.wday) %>, <br/><%= month_name(day.month) %> <%= day.day %></th>
-			<% end %>
-		</tr>
-	</thead>
-	<tbody>
-        <% if !@focus.nil?
-            
-            if @focus == "users"
-                schedule_entries_by_focus = @entries.group_by {|entry| entry.user_id}
-                focus_objects = @users
-            else
-                schedule_entries_by_focus = @entries.group_by {|entry| entry.project_id}
-                focus_objects = @projects
-            end
-            
-            focus_objects.each do |focus_object|
-                entries = schedule_entries_by_focus[focus_object.id]
-                @user = focus_object if @focus == "users"
-                @project = focus_object if @focus == "projects"
-                schedule_entries_by_day = entries.group_by {|entry| entry.date} unless entries.nil? %>
-                <tr>
-                    <th>
-                        <%= link_to @project, :controller => 'schedules', :action => 'index', :date => @date, :project_id => @project unless @project.nil? %>
-                        <%= link_to @user, :controller => 'schedules', :action => 'index', :date => @date, :user_id => @user unless @user.nil? %>
-                    </th>
-                    <% (calendar.startdt..calendar.enddt).each do |day| %>
-                        <td class="even<%= ' today' if Date.today == day %> <%= ' holiday' if day.holiday?($holiday_locale, :observed) %>">
-                            <ul>
-                                <% if !schedule_entries_by_day.nil? && !schedule_entries_by_day[day].nil? %>
-                                    <% schedule_entries_by_day[day].sort.each do |entry| %>
-                                        <%= render :partial => 'schedules/schedule_entry', :locals => {:entry => entry} %>
-                                    <% end %>
-                                <% end %>
-                                <% if @focus == "users" %>
-                                    <% hours = @availabilities[day][focus_object.id] %>
-                                    <%= render :partial => 'schedules/availability', :locals => {:user => @user, :hours => hours, :day => day } %>
-                                <% end unless @availabilities.nil? || @availabilities.empty? %>
-                            </ul>
-                        </td>
-                    <% end %>
-                </tr>
-            <% end %>
-            <% @project = nil %>
-            <% @user = nil %>
-        <% else %>
+<div class="schedule_cal_wrapper">
+  <table class="cal schedule_entry_cal">
+	  <thead>
+		  <tr>
+        <% if !@focus.nil? %><th></th><% end %>
+			  <% (calendar.startdt..calendar.enddt).each do |day| %>
+				  <th><%= day.strftime("%a") %><br /><%= day.strftime("%d %b") %></th>
+			  <% end %>
+		  </tr>
+	  </thead>
+	  <tbody>
+          <% if !@focus.nil?
+              
+              if @focus == "users"
+                  schedule_entries_by_focus = @entries.group_by {|entry| entry.user_id}
+                  focus_objects = @users
+              else
+                  schedule_entries_by_focus = @entries.group_by {|entry| entry.project_id}
+                  focus_objects = @projects
+              end
+              
+              focus_objects.each do |focus_object|
+                  entries = schedule_entries_by_focus[focus_object.id]
+                  @user = focus_object if @focus == "users"
+                  @project = focus_object if @focus == "projects"
+                  schedule_entries_by_day = entries.group_by {|entry| entry.date} unless entries.nil? %>
+                  <tr>
+                      <th>
+                          <%= link_to @project, :controller => 'schedules', :action => 'index', :date => @date, :project_id => @project unless @project.nil? %>
+                          <%= link_to @user, :controller => 'schedules', :action => 'index', :date => @date, :user_id => @user unless @user.nil? %>
+                      </th>
+                      <% (calendar.startdt..calendar.enddt).each do |day| %>
+                          <td class="even<%= ' today' if Date.today == day %> <%= ' holiday' if day.holiday?($holiday_locale, :observed) %>">
+                              <ul>
+                                  <% if !schedule_entries_by_day.nil? && !schedule_entries_by_day[day].nil? %>
+                                      <% schedule_entries_by_day[day].sort.each do |entry| %>
+                                          <%= render :partial => 'schedules/schedule_entry', :locals => {:entry => entry} %>
+                                      <% end %>
+                                  <% end %>
+                                  <% if @focus == "users" %>
+                                      <% hours = @availabilities[day][focus_object.id] %>
+                                      <%= render :partial => 'schedules/availability', :locals => {:user => @user, :hours => hours, :day => day } %>
+                                  <% end unless @availabilities.nil? || @availabilities.empty? %>
+                              </ul>
+                          </td>
+                      <% end %>
+                  </tr>
+              <% end %>
+              <% @project = nil %>
+              <% @user = nil %>
+          <% else %>
             <% schedule_entries_by_day = @entries.group_by {|entry| entry.date} %>
-    		<tr>
-    			<% (calendar.startdt..calendar.enddt).each do |day| %>
-                                <td class="even<%= ' today' if Date.today == day %> <%= ' holiday' if day.holiday?($holiday_locale, :observed) %>">
-    					<ul>
-    						<% if !schedule_entries_by_day[day].nil? %>
-    							<% schedule_entries_by_day[day].sort.each do |entry| %>
-    								<%= render :partial => 'schedules/schedule_entry', :locals => {:entry => entry} %>
-    							<% end %>
-    						<% end %>
-    						<% @availabilities[day].each do |user_id, hours| %>
-    							<% user = User.find(user_id) %>
-    							<%= render :partial => 'schedules/availability', :locals => {:user => user, :hours => hours, :day => day } %>
-    						<% end unless @availabilities.nil? || @availabilities.empty? %>
-    					</ul>
-    				</td>
-    			<% end %>
-    		</tr>
-		<% end %>
-	</tbody>
-	<tfoot>
-        <tr>
-            <% schedule_entries_by_day ||= @entries.group_by {|entry| entry.date} %>
-            <% if !@focus.nil? %><th></th><% end %>
-            <% entries_by_day = schedule_entries_by_day %>
-            <% (calendar.startdt..calendar.enddt).each do |day| %>
-                <th>
-                    <% sum = entries_by_day[day].nil? ? 0 : entries_by_day[day].collect(&:hours).sum %>
-                    <%= sum if sum > 0 %>
-                    <% available_sum = @availabilities[day].nil? ? 0 : @availabilities[day].collect { |user, hours| hours }.sum %>
-                    <%= "<span class='schedule_available'>(#{available_sum.to_s} #{l(:label_schedules_available).downcase})</em>" if available_sum > 0 %>
-                </th>
-            <% end %>
-        </tr>
-    </tfoot>
-</table>
+      		<tr>
+      			<% (calendar.startdt..calendar.enddt).each do |day| %>
+              <td class="even<%= ' today' if Date.today == day %> <%= ' holiday' if day.holiday?($holiday_locale, :observed) %>">
+      					<ul>
+      						<% if !schedule_entries_by_day[day].nil? %>
+      							<% schedule_entries_by_day[day].sort.each do |entry| %>
+      								<%= render :partial => 'schedules/schedule_entry', :locals => {:entry => entry} %>
+      							<% end %>
+      						<% end %>
+      						<% @availabilities[day].each do |user_id, hours| %>
+      							<% user = User.find(user_id) %>
+      							<%= render :partial => 'schedules/availability', :locals => {:user => user, :hours => hours, :day => day } %>
+      						<% end unless @availabilities.nil? || @availabilities.empty? %>
+      					</ul>
+      				</td>
+      			<% end %>
+      		</tr>
+		  <% end %>
+	  </tbody>
+	  <tfoot>
+          <tr>
+              <% schedule_entries_by_day ||= @entries.group_by {|entry| entry.date} %>
+              <% if !@focus.nil? %><th></th><% end %>
+              <% entries_by_day = schedule_entries_by_day %>
+              <% (calendar.startdt..calendar.enddt).each do |day| %>
+                  <th>
+                      <% sum = entries_by_day[day].nil? ? 0 : entries_by_day[day].collect(&:hours).sum %>
+                      <%= sum if sum > 0 %>
+                      <% available_sum = @availabilities[day].nil? ? 0 : @availabilities[day].collect { |user, hours| hours }.sum %>
+                      <%= "<span class='schedule_available'>(#{available_sum.to_s} #{l(:label_schedules_available).downcase})</em>" if available_sum > 0 %>
+                  </th>
+              <% end %>
+          </tr>
+      </tfoot>
+  </table>
+</div>  
